--- a/src/index.html
+++ b/src/index.html
@@ -33,17 +33,17 @@
 
 <body >
   <app-root></app-root>
-  <script language="JavaScript">
+  <!-- <script language="JavaScript">
     function toggleVisibility(eventsender, idOfObjectToToggle) {
       var myNewState = "hidden";
       if (eventsender.checked === true) {
         myNewState = "visible";
       }
-  
+
       document.getElementById(idOfObjectToToggle).style.visibility = myNewState;
     }
-  
-  </script>
+
+  </script> -->
 </body>
 
 </html>
