--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,11 @@
 
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="assets/css/demo.css" rel="stylesheet" />
+  <link href="assets/css/main.css" rel="stylesheet" />
 
 </head>
 
-<body >
+<body style="background-image: url('assets/img/wizard-book.jpg')">
   <app-root></app-root>
   <!-- <script language="JavaScript">
     function toggleVisibility(eventsender, idOfObjectToToggle) {
